# Cmake_First_pg1

./: README.md
Cmake_Scnd_pg2/: CMakeLists.txt  main.cpp
Cmake_Scnd_pg2/include/: circle.h  rect.h  tri.h
Cmake_Scnd_pg2/src/: circle.cpp  rect.cpp  tri.cpp
Smpl_pg1/source/: CMakeLists.txt  main.cpp
